2022-09-05  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (mpz_powm): Fix case of x^0 (mod 1), should be 0.
	Reported by Guido Vranken.

2022-05-29 Marco Bodrato <bodrato@mail.dm.unipi.it>
	* mini-mpq.c (mpq_helper_2exp): New helper (internal) function.

2022-04-18  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (gmp_assert_nocarry): Avoid warning about unused
	variable in NDEBUG builds. Reported by Paul Egggert.

2022-04-17 Marco Bodrato <bodrato@mail.dm.unipi.it>
	* mini-mpq.c (mpq_helper_canonicalize): Remove tmp parameter.

2022-03-19 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_swap): Use MPN_PTR_SWAP, tx Paul Eggert.

2021-10-01 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c: Add asserts (removed at compile time) on limb size.
	* mini-mpq.c: Add #defines needed if mini-gmp.h is not included.

2021-08-02 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_rootrem): Better initial guess.
	(gmp_stronglucas): Shortcut, mpn_common_scan instead of mpz_scan0.

2021-05-13 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/t-reuse.c: Use numberof() to reduce the risk of typos.

2021-04-16 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (gmp_millerrabin): Don't check unlikely 0 or 1.
	* mini-gmp.h: Update FILE tests from gmp-h.

2021-01-02 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_export): Correct error message (tx: Guillermo Monguia)

2020-11-28 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_gcd): Support limbs larger than unsigned long.
	* tests/t-invert.c: Likewise.

2020-05-21  Torbjörn Granlund  <tg@gmplib.org>

	* tests/t-double.c: Provide default M_PI definition.

2020-11-10 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/run-tests: Update WINEPATH, instead of overwriting it.

2020-10-25 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-mpq.c (mpq_canonical_sign): Use the correct type for size.

2020-10-18 Marco Bodrato <bodrato@mail.dm.unipi.it>
